# Voice-Agent

./: .env  debug_ws.py  demo_script.md  pyproject.toml
backend/: QUICK_START.sh  SETUP.md  debug_mapping.py  knowledge_base.txt  move_history_to_investors.sql  requirements.txt  reset_dispatch_logs.py  schema.sql  seed.sql  seed_dispatch_logs.py  seed_kb.py  seed_mutual_funds.py  setup.sh  setup_nltk.py  simulate_conversation.py  update_schema.sql  verify_rag.py  verify_storage.py
backend/app/: main.py
backend/app/api/: agents.py  analytics.py  rag.py  websocket.py
backend/app/core/: config.py  state.py
backend/app/services/: agent_service.py  analytics_service.py  deepgram_service.py  hf_service.py  rag_service.py  summary_service.py  whisper_service.py
backend/tests/: test_rag.py
frontend/: package-lock.json  package.json
frontend/public/: audio-processor.js
frontend/src/: App.tsx
frontend/src/components/: AgentSelector.tsx  LeadsList.tsx
frontend/src/components/ui/: card.tsx  scroll-area.tsx
frontend/src/hooks/: useAudioStream.ts
frontend/src/pages/: ChatPage.tsx  SelectionPage.tsx
